# pim-data-exporter

./: .craft.ini  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  Messages.sh  REUSE.toml  TODO  config-pimdataexporter.h.in  org.kde.pimdataexporter.appdata.xml  org.kde.pimsettingexporter.appdata.xml  pimdataexporter-version.h.cmake  pimdataexporter.renamecategories  pimsettingexporter-version.h.cmake  pimsettingexporter.categories  pimsettingexporter.renamecategories
console/: CMakeLists.txt  importexportprogressindicatorconsole.cpp  importexportprogressindicatorconsole.h  loginfile.cpp  loginfile.h  loginfo.cpp  loginfo.h  main.cpp  pimdataexporterconsole.cpp  pimdataexporterconsole.h  pimsettingexporterconsole.cpp  pimsettingexporterconsole.h
console/autotests/: CMakeLists.txt  loginfiletest.cpp  loginfiletest.h
core/: CMakeLists.txt  abstractimportexportjob.cpp  abstractimportexportjob.h  akonadidatabase.cpp  akonadidatabase.h  archivestorage.cpp  archivestorage.h  backupresourcefilejob.cpp  backupresourcefilejob.h  backupresourcefilejobbase.cpp  backupresourcefilejobbase.h  backupresourcefilejobimpl.cpp  backupresourcefilejobimpl.h  exportresourcearchivejob.cpp  exportresourcearchivejob.h  importexportprogressindicatorbase.cpp  importexportprogressindicatorbase.h  pimdatabackuprestore.cpp  pimdatabackuprestore.h  pimdatabackupthread.cpp  pimdatabackupthread.h  pimdataexportercore_private_export.h  pimdataexporterkernel.cpp  pimdataexporterkernel.h  pimdataimportdatainfofile.cpp  pimdataimportdatainfofile.h  pimsettingbackupthread.cpp  pimsettingbackupthread.h  pimsettingexportercore_private_export.h  pimsettingexporterkernel.cpp  pimsettingexporterkernel.h  pimsettingimportdatainfofile.cpp  pimsettingimportdatainfofile.h  pimsettingsbackuprestore.cpp  pimsettingsbackuprestore.h  resourceconverter.cpp  resourceconverter.h  resourceconverterbase.cpp  resourceconverterbase.h  resourceconverterimpl.cpp  (+7 more)
core/addressbook/: exportaddressbookjob.cpp  exportaddressbookjob.h  exportaddressbookjobinterface.cpp  exportaddressbookjobinterface.h  exportaddressbookjobinterfaceimpl.cpp  exportaddressbookjobinterfaceimpl.h  importaddressbookjob.cpp  importaddressbookjob.h  importaddressbookjobinterface.cpp  importaddressbookjobinterface.h  importaddressbookjobinterfaceimpl.cpp  importaddressbookjobinterfaceimpl.h
core/akregator/: exportakregatorjob.cpp  exportakregatorjob.h  exportakregatorjobinterface.cpp  exportakregatorjobinterface.h  importakregatorjob.cpp  importakregatorjob.h  importakregatorjobinterface.cpp  importakregatorjobinterface.h
core/alarm/: exportalarmjob.cpp  exportalarmjob.h  exportalarmjobinterface.cpp  exportalarmjobinterface.h  exportalarmjobinterfaceimpl.cpp  exportalarmjobinterfaceimpl.h  importalarmjob.cpp  importalarmjob.h  importalarmjobinterface.cpp  importalarmjobinterface.h  importalarmjobinterfaceimpl.cpp  importalarmjobinterfaceimpl.h
core/autotests/: CMakeLists.txt  backupresourcefilejobimpltest.cpp  backupresourcefilejobimpltest.h  backupresourcefilejobtest.cpp  backupresourcefilejobtest.h  compareexportfile.cpp  compareexportfile.h  comparefilehelper.cpp  comparefilehelper.h  compareimportfile.cpp  compareimportfile.h  compareloggingfile.cpp  compareloggingfile.h  exportimportutil.cpp  exportimportutil.h  generatelistfilefromarchive.cpp  generatelistfilefromarchive.h  importexportprogressindicatortest.cpp  importexportprogressindicatortest.h  loadlistfromfile.cpp  loadlistfromfile.h  logcreatingressource.cpp  logcreatingressource.h  resourceconverterclasstest.cpp  resourceconverterclasstest.h  resourceconvertertest.cpp  resourceconvertertest.h  saveresourceconfigtest.cpp  saveresourceconfigtest.h  testbackupresourcefilejob.cpp  testbackupresourcefilejob.h  testexportfile.cpp  testexportfile.h  testimportfile.cpp  testimportfile.h  utilstest.cpp  utilstest.h
core/blogilo/: exportblogilojob.cpp  exportblogilojob.h  importblogilojob.cpp  importblogilojob.h
core/calendar/: exportcalendarjob.cpp  exportcalendarjob.h  exportcalendarjobinterface.cpp  exportcalendarjobinterface.h  exportcalendarjobinterfaceimpl.cpp  exportcalendarjobinterfaceimpl.h  importcalendarjob.cpp  importcalendarjob.h  importcalendarjobinterface.cpp  importcalendarjobinterface.h  importcalendarjobinterfaceimpl.cpp  importcalendarjobinterfaceimpl.h
core/mail/: exportmailfolderattributejob.cpp  exportmailfolderattributejob.h  exportmailfolderattributejobimpl.cpp  exportmailfolderattributejobimpl.h  exportmailjob.cpp  exportmailjob.h  exportmailjobinterface.cpp  exportmailjobinterface.h  exportmailjobinterfaceimpl.cpp  exportmailjobinterfaceimpl.h  importexportmailutil.cpp  importexportmailutil.h  importmailfolderattributejob.cpp  importmailfolderattributejob.h  importmailfolderattributejobimpl.cpp  importmailfolderattributejobimpl.h  importmailjob.cpp  importmailjob.h  importmailjobinterface.cpp  importmailjobinterface.h  importmailjobinterfaceimpl.cpp  importmailjobinterfaceimpl.h  smtpmailtransport.cpp  smtpmailtransport.h
core/notes/: exportnotesjob.cpp  exportnotesjob.h  exportnotesjobinterface.cpp  exportnotesjobinterface.h  exportnotesjobinterfaceimpl.cpp  exportnotesjobinterfaceimpl.h  importnotesjob.cpp  importnotesjob.h  importnotesjobinterface.cpp  importnotesjobinterface.h  importnotesjobinterfaceimpl.cpp  importnotesjobinterfaceimpl.h
core/xml/: templateselection.cpp  templateselection.h
gui/: CMakeLists.txt  backup-structure.txt  importexportprogressindicatorgui.cpp  importexportprogressindicatorgui.h  main.cpp  org.kde.pimdataexporter.desktop  org.kde.pimsettingexporter.desktop  pimdatabackuprestoreui.cpp  pimdatabackuprestoreui.h  pimdatacommandlineoption.cpp  pimdatacommandlineoption.h  pimdataexporter.qrc  pimdataexporter.rc  pimdataexporterwindow.cpp  pimdataexporterwindow.h  pimsettingcommandlineoption.cpp  pimsettingcommandlineoption.h  pimsettingexporterwindow.cpp  pimsettingexporterwindow.h  pimsettingsbackuprestoreui.cpp  pimsettingsbackuprestoreui.h
gui/autotests/: CMakeLists.txt  (+14 more)
(+331 files in other folders)
